--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -326,5 +326,35 @@
     "deleteAccountPasswordCheckButtonLabelConfirm": "Delete Account",
     "deleteAccountPasswordCheckButtonLabelCancel": "Cancel",
     "picture_Options_Label_Share": "Share Picture",
-    "picture_Options_Label_Delete": "Delete Picture"
+    "picture_Options_Label_Delete": "Delete Picture",
+    "sp_ContactButtonLabel": "Contact",
+    "sp_LocationButtonLabel": "Location",
+    "sp_BehInfo_StrangersLabel": "Friendly to Strangers",
+    "sp_BehInfo_StarngersDescription": "Honey is nice to new people",
+    "sp_BehInfo_CarsLabel": "Good with Cars",
+    "sp_BehInfo_CarsDescription": "Honey doesnt get agitaded around cars",
+    "sp_BehInfo_KidsLabel": "Friendly to Kids",
+    "sp_BehInfo_KidsDescription": "Honey is nice to children",
+    "sp_BehInfo_CatsLabel": "Friendly to cats",
+    "sp_BehInfo_CatsDescription": "Honey is nice with cats",
+    "sp_BehInfo_DogsLabel": "Friendly to dogs",
+    "sp_BehInfo_DogsDescription": "Honey is nice with other dogs",
+    "sp_contactLanguagesSpoken": "Languages: ",
+    "sp_med_info_spayed_Label": "Neutered/Spayed",
+    "sp_med_info_spayed_Desc": "Honey is has been neutered/spayed",
+    "sp_sendLocationDialog_Title": "What's the best way to contact you?",
+    "sp_sendLocationDialog_Description": "Your GPS location has been automatically sent to the dog owner to assist in the reunion process",
+    "sp_sendLocationDialog_Option_Phone_Title": "Phone Number",
+    "sp_sendLocationDialog_Option_Phone_Desc": "Send my phone number",
+    "sp_sendLocationDialog_Option_Phone_Button": "Send",
+    "sp_sendLocationDialog_Option_Email_Title": "Email",
+    "sp_sendLocationDialog_Option_Email_Desc": "Send my email address",
+    "sp_sendLocationDialog_Option_Email_Button": "Send",
+    "sp_sendLocationDialog_Option_Contact_Title": "Show Contact",
+    "sp_sendLocationDialog_Option_Contact_Desc": "I'll contact them myself",
+    "sp_sendLocationDialog_Option_Contact_Button": "Contact",
+    "sp_PetScreen_Titles_Contact": "Contact",
+    "sp_PetScreen_Titles_Behaviour": "Behaviour",
+    "sp_PetScreen_Titles_MedInfo": "Medical Information",
+    "sp_PetScreen_Titles_Documents": "Documents"
 }
