--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -57,5 +57,7 @@
     "sp_PicturePage_NoPictures": "No Pictures yet",
     "change_Language_Label": "Change Language",
     "iAmLost": "I am Lost!",
-    "sp_FoundMeInformation_Lost": "I am currently marked as lostt. If you found me please call or send my positions to my owner with the buttons below."
+    "sp_FoundMeInformation_Lost": "I am currently marked as lostt. If you found me please call or send my positions to my owner with the buttons below.",
+    "sendLocationPopUpTitle": "{Karamba} is currently marked as Lost.",
+    "sendLocationPopUpSubtitle": "If you found {Karamba}, please consider sharing your GPS location and contacting the owner. You can either send your contact information or allow the owner to reach out to you."
 }
